--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,8 @@ body {
   width: 100%;
 
   margin: 0px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .sidebar {
