--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,71 @@
+/* css reset from https://www.joshwcomeau.com/css/custom-css-reset/ */
+/*
+  1. Use a more-intuitive box-sizing model.
+*/
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+/*
+  2. Remove default margin
+*/
+* {
+  margin: 0;
+}
+/*
+  Typographic tweaks!
+  3. Add accessible line-height
+  4. Improve text rendering
+*/
+body {
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+}
+/*
+  5. Improve media defaults
+*/
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+}
+/*
+  6. Remove built-in form typography styles
+*/
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+/*
+  7. Avoid text overflows
+*/
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
+/*
+  8. Create a root stacking context
+*/
+#root,
+#__next {
+  isolation: isolate;
+}
+
 body {
   display: grid;
   grid-template-rows: 1fr 5fr;
   grid-template-columns: 1fr 4fr;
-  height: 100vh;
-  width: 100%;
 
   margin: 0px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
@@ -11,8 +73,27 @@ body {
 }
 
 .sidebar {
+  --icon-size: 2rem;
   grid-row: 1 / span 2;
+  display: grid;
+  grid-template-columns: var(--icon-size) 1fr;
+  gap: 16px;
+  align-items: center;
+
+  padding: 16px;
   background-color: blue;
+  color: white;
+  font-weight: bold;
+}
+
+.sidebar p {
+  font-size: var(--icon-size);
+}
+
+.sidebar svg {
+  height: var(--icon-size);
+  width: auto;
+  fill: white;
 }
 
 .header {
