--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,7 @@ body {
   display: grid;
   grid-template-rows: 1fr 5fr;
   grid-template-columns: 1fr 4fr;
+  height: 100vh;
 
   margin: 0px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
@@ -73,27 +74,37 @@ body {
 }
 
 .sidebar {
-  --icon-size: 2rem;
   grid-row: 1 / span 2;
   display: grid;
-  grid-template-columns: var(--icon-size) 1fr;
+  grid-template-columns: 3rem 1fr;
+  grid-auto-rows: min-content;
   gap: 16px;
   align-items: center;
 
   padding: 16px;
   background-color: blue;
   color: white;
+  font-weight: 500;
+}
+
+.sidebar svg.logo {
+  height: 3rem;
+}
+
+.sidebar p.logo {
+  font-size: 2rem;
   font-weight: bold;
 }
 
-.sidebar p {
-  font-size: var(--icon-size);
-}
-
 .sidebar svg {
-  height: var(--icon-size);
+  height: 1.5rem;
+  justify-self: center;
   width: auto;
   fill: white;
+}
+
+.sidebar p {
+  font-size: 1.5rem;
 }
 
 .header {
