--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,7 @@ body {
   display: grid;
   grid-template-columns: 3rem 1fr;
   grid-auto-rows: min-content;
-  gap: 16px;
+  gap: 36px 12px;
   align-items: center;
 
   padding: 16px;
@@ -87,13 +87,11 @@ body {
   font-weight: 500;
 }
 
-.sidebar svg.logo {
-  height: 3rem;
-}
-
-.sidebar p.logo {
-  font-size: 2rem;
-  font-weight: bold;
+.sidebar > * {
+  display: grid;
+  grid-column: 1 / span 2;
+  grid-template-columns: subgrid;
+  align-items: center;
 }
 
 .sidebar svg {
@@ -103,7 +101,17 @@ body {
   fill: white;
 }
 
-.sidebar p {
+.logo > svg {
+  height: 3rem;
+}
+
+.logo > p {
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.primary p,
+.secondary p {
   font-size: 1.5rem;
 }
 
