--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,10 @@ body {
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
+.bold {
+  font-weight: 600;
+}
+
 .sidebar {
   grid-row: 1 / span 2;
   display: grid;
@@ -84,7 +88,6 @@ body {
   padding: 16px;
   background-color: blue;
   color: white;
-  font-weight: 500;
 }
 
 .sidebar > * {
@@ -107,7 +110,6 @@ body {
 
 .logo > p {
   font-size: 2rem;
-  font-weight: bold;
 }
 
 .primary p,
@@ -119,8 +121,20 @@ body {
   display: grid;
   grid-template-columns: 3fr 2fr;
   grid-template-rows: 1fr 2fr;
+  margin: 24px 36px;
 
   background-color: white;
+}
+
+.header svg {
+  height: 1.5rem;
+  justify-self: center;
+  width: auto;
+}
+
+.profile-pic {
+  object-fit: cover;
+  border-radius: 100%;
 }
 
 .search-bar,
