--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@
 */
 * {
   margin: 0;
+  border: 1px solid rebeccapurple;
 }
 /*
   Typographic tweaks!
@@ -135,6 +136,7 @@ body {
 .profile-pic {
   object-fit: cover;
   border-radius: 100%;
+  height: 64px;
 }
 
 .search-bar,
